[calendar] Fixed calendar height (6 weeks month was overflowing it)

--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  height: 450px;
+  height: 520px;
 }
 
 .calendar {
